Resolve the remaining SonarLint issues