@@ -8,8 +8,6 @@ import com.ahmetaksunger.ecommerce.service.CartCalculator;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
-import java.util.stream.Collectors;
-
 @Component
 @RequiredArgsConstructor
 public class CartVMConverter {
@@ -20,7 +18,7 @@ public class CartVMConverter {
         return CartVM.builder()
                 .id(from.getId())
                 .customer(mapperService.forResponse().map(from.getCustomer(), CustomerVM.class))
-                .cartItems(from.getCartItems().stream().map(cartItemVMConverter::convert).collect(Collectors.toList()))
+                .cartItems(from.getCartItems().stream().map(cartItemVMConverter::convert).toList())
                 .totalProductCount(CartCalculator.calculateTotalProductCount(from))
                 .total(CartCalculator.calculateTotal(from))
                 .build();
